Se realiza la implementacion de un fondo y el logo de la institucion
la finalidad de esto fue implementar un fondo y el logo de la institucion buses_venegas:_s.a

--- a/frontend/src/assets/App.css
+++ b/frontend/src/assets/App.css
@@ -31,7 +31,7 @@ body {
 }
 
 .logo {
-    height: 50px;
+    height: 85px;
     transition: transform 0.3s;
 }
 
@@ -56,7 +56,7 @@ body {
 }
 
 .header-banner {
-    background-image: url("https://i.imgur.com/K1LgO3u.jpeg");
+    background-image: url("./BUSES_VENEGAS_FONDO.jpg");
     background-size: cover;
     background-position: center;
     height: 500px;
